fix length of alerts on mobile devices

--- a/web/webpage/src/styles.css
+++ b/web/webpage/src/styles.css
@@ -49,8 +49,10 @@ body {
 
 .alert-message {
     position: fixed;
-    top: 50px;
-    width: 1000px;
+    top: 100px;
+    max-width: 1100px;
+    left: 0px;
+    right: 0px;
     z-index: 998;
     margin: auto;
 }
